fixed z-index in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ a {
     position: sticky;
     top: -28px;
     background: #fffcf4;
+    z-index: 1;
 }
 .nav {
     margin-left: auto;
